--- a/src/02-video.html
+++ b/src/02-video.html
@@ -21,7 +21,7 @@
     ></iframe>
 
     <script src="https://player.vimeo.com/api/player.js"></script>
-    <script>
+    <!-- <script>
       const iframe = document.querySelector('iframe');
       const player = new Vimeo.Player(iframe);
 
@@ -32,7 +32,9 @@
       player.getVideoTitle().then(function (title) {
         console.log('title:', title);
       });
-    </script>
+    </script> -->
+
+  
 
     <script src="js/02-video.js" type="module"></script>
   </body>
